fixed horrible bug with cube faces not splitting correctly

--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "example": "example"
   },
   "dependencies": {
-    "gl-matrix": "^2.0.0",
+    "bit-twiddle": "^1.0.0",
+    "dup": "^1.0.0",
+    "extract-frustum-planes": "^1.0.0",
     "gl-buffer": "^2.0.3",
+    "gl-mat4": "^1.0.1",
+    "gl-matrix": "^2.0.0",
+    "gl-state": "^1.0.0",
     "gl-vao": "^1.1.1",
     "glslify": "^1.2.0",
-    "gl-state": "^1.0.0",
-    "bit-twiddle": "^1.0.0",
-    "vectorize-text": "^2.0.2",
-    "extract-frustum-planes": "^1.0.0",
-    "split-polygon": "^1.0.0"
+    "robust-orientation": "^1.1.3",
+    "split-polygon": "^1.0.0",
+    "vectorize-text": "^2.0.2"
   },
   "devDependencies": {
     "game-shell-orbit-camera": "^0.0.0",
