--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "extract-frustum-planes": "^1.0.0",
     "gl-buffer": "^2.0.3",
     "gl-mat4": "^1.0.1",
-    "gl-matrix": "^2.0.0",
     "gl-state": "^1.0.0",
     "gl-vao": "^1.1.1",
+    "gl-vec4": "^1.0.1",
     "glslify": "^1.2.0",
     "robust-orientation": "^1.1.3",
     "split-polygon": "^1.0.0",
