--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "extract-frustum-planes": "^1.0.0",
     "gl-buffer": "^2.0.3",
     "gl-mat4": "^1.0.1",
+    "gl-shader": "^4.0.4",
     "gl-state": "^1.0.0",
     "gl-vao": "^1.1.1",
     "gl-vec4": "^1.0.1",
-    "glslify": "^1.2.0",
+    "glslify": "^2.1.2",
     "robust-orientation": "^1.1.3",
     "split-polygon": "^1.0.0",
     "vectorize-text": "^3.0.0"
