--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "split-polygon": "^1.0.0",
     "vectorize-text": "^3.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "game-shell-orbit-camera": "^1.0.0",
+    "gl-matrix": "^2.3.2",
+    "gl-mesh3d": "^1.3.0",
+    "gl-now": "^1.4.0",
+    "isosurface": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "beefy --open --live example/example.js"
