--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "glslify": "^6.1.0",
     "robust-orientation": "^1.1.3",
     "split-polygon": "^1.0.0",
-    "vectorize-text": "git://github.com/archmoj/vectorize-text.git#7e13665e8e1b60edc53fce925acceed67d93e3f0"
+    "vectorize-text": "^3.2.0"
   },
   "devDependencies": {
     "game-shell-orbit-camera": "^1.0.0",
