--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "gl-state": "^1.0.0",
     "gl-vao": "^1.1.1",
     "gl-vec4": "^1.0.1",
-    "glslify": "^6.1.0",
+    "glslify": "^6.4.1",
     "robust-orientation": "^1.1.3",
     "split-polygon": "^1.0.0",
     "vectorize-text": "^3.2.0"
   },
   "devDependencies": {
+    "chttps": "^1.0.6",
     "game-shell-orbit-camera": "^1.0.0",
     "gl-matrix": "^2.3.2",
     "gl-mesh3d": "^1.3.0",
@@ -29,6 +30,7 @@
     "isosurface": "^1.0.0"
   },
   "scripts": {
+    "postshrinkwrap": "chttps .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "beefy --open --live example/example.js"
   },
